# butsugiri.github.io

./: .gitignore  404.html  AGENTS.md  Dockerfile  docker-compose.yml  feed.xml  generate.py  index.html  references.bib
.github/workflows/: gh-pages.yml
about/: index.html
my-blog/: Gemfile  _config.yml  index.markdown  index.md
my-blog/_bibliography/: domestic.bib  international_conference.bib  journal.bib  others.bib
my-blog/_data/: menu.yml
my-blog/_layouts/: bibtemplate.html
obsolete/: README.md  Taskfile.yaml  pyproject.toml  references.bib
obsolete/publish/: index.html
publish/css/: main.css
template/: index.html
