[tool.poetry]
name = "personal_page"
version = "0.1.0"
description = ""
authors = ["Shun Kiyono <shunk52@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
bibtexparser = "^1.1.0"
jinja2 = "^2.11.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
